improve swagger documentation, provide examples, rename dtos, update description and summary
