# cmd/account/internal/interfaces/dto/update_account.go
@@ -4,23 +4,23 @@ import "time"
 
 // UpdateAccountRequest - update account request dto.
 type UpdateAccountRequest struct {
-	FirstName   *string                 `json:"firstName"`
-	LastName    *string                 `json:"lastName"`
-	Phone       *string                 `json:"phone"`
-	DateOfBirth *time.Time              `json:"dateOfBirth"`
+	FirstName   *string                 `json:"firstName" example:"John"`
+	LastName    *string                 `json:"lastName" example:"Doe"`
+	Phone       *string                 `json:"phone" example:"09066871243"`
+	DateOfBirth *time.Time              `json:"dateOfBirth" example:"2000-2-20"`
 	Locations   *[]UpdateAddressRequest `json:"locations"`
-}
+} // @name UpdateAccountRequest
 
 // UpdateAddressRequest - update address request dto.
 type UpdateAddressRequest struct {
-	ID         string  `json:"id"`
-	Street     *string `json:"street"`
-	Unit       *string `json:"unit"`
-	City       *string `json:"city"`
-	District   *string `json:"district"`
-	State      *string `json:"state"`
-	Country    *string `json:"country"`
-	PostalCode *string `json:"postalCode"`
+	ID         string  `json:"id" example:"3d3e36e1-9533-4408-8677-9d693a9ed8d4"`
+	Street     *string `json:"street" validate:"required" example:"365 Talon I Real 1740"`
+	Unit       *string `json:"unit" example:"Unit 206 Rm. 5"`
+	City       *string `json:"city" example:"San Pedro"`
+	District   *string `json:"district" example:"Laguna"`
+	State      *string `json:"state" example:"Calabarzon"`
+	Country    *string `json:"country" example:"Philippines"`
+	PostalCode *string `json:"postalCode" example:"4023"`
 }
 
 // UpdateAccountResponse - update account response dto.
