# cmd/account/internal/interfaces/http/handlers/v1/get_account_handler.go
@@ -28,15 +28,15 @@ func NewGetAccountHandler(logger interfaces.Logger, mediator *midt.Midt) *GetAcc
 
 // Handle
 // @Tags account
-// @Summary Get account by ID
-// @Description Get account record by account ID.
+// @Summary Retrieve an existing account.
+// @Description Retrieves an existing account record that matches the provided ID.
 // @Accept json
 // @Produce json
-// @Param id path string true "Account ID"
-// @Success 200 {object} dto.GetAccountResponse
-// @Failure 400 {object} errors.HTTPError
-// @Failure 404 {object} errors.HTTPError
-// @Failure 500 {object} errors.HTTPError
+// @Param id path string true "Account ID" example("0b6ecded-fa9d-4b39-a309-9ef501de15f4")
+// @Success 200 {object} GetAccountResponse
+// @Failure 400 {object} HTTPError
+// @Failure 404 {object} HTTPError
+// @Failure 500 {object} HTTPError
 // @Router /api/v1/account/{id} [get]
 func (c *GetAccountHandler) Handle(w http.ResponseWriter, r *http.Request) {
 	ctx, cancel := context.WithTimeout(context.Background(), constants.RequestTimeout)
